--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,8 +28,7 @@ install:
   - ps: Start-FileDownload "https://static.rust-lang.org/dist/rust-${env:RUST_VERSION}-${env:TARGET}.exe"
   - rust-%RUST_VERSION%-%TARGET%.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
   - SET PATH=%PATH%;C:\Program Files (x86)\Rust\bin
-  - rustc -V
-  - cargo -V
+  - rustc --version --verbose
   - node --version
   - npm --version
 
@@ -37,8 +36,7 @@ build: false
 
 # Equivalent to Travis' `script` phase
 test_script:
-    #- cargo run --verbose
-    - rustc src\main.rs
+    - rustc main.rs
     - main.exe
 
 branches:
